WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278474
[WebGPU] Validation error in Queue::writeTexture
https://bugs.webkit.org/show_bug.cgi?id=278474
Summary
[WebGPU] Validation error in Queue::writeTexture
Mike Wyrzykowski
Reported
2024-08-21 11:42:35 PDT
[WebGPU] Validation error in Queue::writeTexture
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-08-21 11:42:48 PDT
radar://134431789
Mike Wyrzykowski
Comment 2
2024-08-21 12:00:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32540
EWS
Comment 3
2024-08-21 17:07:43 PDT
Committed
282589@main
(77a36efdb84b): <
https://commits.webkit.org/282589@main
> Reviewed commits have been landed. Closing PR #32540 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug