[WebGPU] Validation error in Queue::writeTexture https://bugs.webkit.org/show_bug.cgi?id=278474 radar://134431789

Reviewed by Dan Glastonbury.

Ensure bytesPerRow is correct size for 2D and 3D copies.

* LayoutTests/fast/webgpu/nocrash/fuzz-278474-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-278474.html: Added.
* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::writeTexture):

Canonical link: https://commits.webkit.org/282589@main